k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: brhmkskn/k8sproject_backend:proje
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP # The service is accessible only within the Kubernetes cluster. External traffic is routed to this service through the Ingress Controller.
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
